// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders the Dashboard correctly 1`] = `
<View>
  <Text
    style={
      [
        {
          "color": "#E0E0E0",
        },
      ]
    }
  >
    You're currently in the dashboard!
  </Text>
</View>
`;

exports[`<App /> renders the Discover correctly 1`] = `
<View>
  <Text>
    You're currently in the discover section!
  </Text>
</View>
`;

exports[`<App /> renders the Settings correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
>
  <Text>
    You're currently on the settings page!
  </Text>
</RNCSafeAreaView>
`;

exports[`renders correctly 1`] = `
<View>
  <Text>
    Voluntra's humble beginnings
  </Text>
</View>
`;
